--- a/LoginMVC/Views/Shared/_Layout.cshtml
+++ b/LoginMVC/Views/Shared/_Layout.cshtml
@@ -7,38 +7,67 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
-<body>
+<body class="bg-light">
+    <div class="d-flex vh-100 overflow-hidden">
+        <!-- Sidebar - Toggle with margin -->
+        <div class="bg-white border-end overflow-auto" style="width: 500px;" id="sidebarMenu">
 
-    <!-- MAIN FLEX CONTAINER -->
-    <div class="d-flex max-vh-100">
-
-        <div class="bg-light p-5 ">
-
-        </div>
-            
-        <div class="d-flex flex-column gap-2">
-            <!-- NAVBAR-->
-            <div class="navbar navbar-expand-lg navbar-light bg-light d-flex p-3 min-vw-100">
-
-                @Html.ActionLink(
-                    "Application name",
-                    "Index",
-                    "Home",
-                    new { area = "" },
-                    new { @class = "navbar-brand mb-3" }
-                )
+            <div class="w-100 p-3" style="height: 200px; overflow: hidden;">
+                <img src="https://images.unsplash.com/photo-1632119753701-1d5086c56175?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                     alt="User Profile Picture"
+                     class="img-fluid rounded h-100 w-100 object-fit-cover hover-scale" />
             </div>
 
-            <!-- MAIN CONTENT -->
-            <main class="flex-grow-1">
-                @RenderBody()
-                <hr />
-            </main>
-
+            <div class="px-3">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Dropdown
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-dark">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li>   
+                </ul>       
+            </div>
         </div>
 
+        <!-- Main Content Wrapper -->
+        <div class="d-flex flex-column flex-grow-1 overflow-hidden">
 
+            <!-- Header -->
+            <div class="d-flex gap-2 align-items-center p-3 bg-white border-bottom">
 
+                <!-- Sidebar Toggler -->
+
+                <button type="button"
+                        class="btn btn-light px-2 py-1"
+                        onclick="toggleSidebar()">
+                    <i class="bi bi-list fs-4"></i>
+                </button>
+
+                <!-- Brand / Title -->
+                <a class="navbar-brand mb-0" href="#">
+                    @ViewBag.Title
+                </a>
+            </div>
+
+            <!-- Page Content -->
+            <main class="flex-grow-1 overflow-auto p-3">
+                @RenderBody()
+            </main>
+        </div>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
