Refactor sidebar for improved UX and responsiveness
Updated CSS for smoother transitions using width. Enhanced JavaScript with event listeners for collapsible elements. Redesigned HTML structure for a more interactive sidebar menu, including collapsible sections and a logout button.

--- a/LoginMVC/Content/Site.css
+++ b/LoginMVC/Content/Site.css
@@ -1,9 +1,12 @@
-﻿#sidebarMenu {
-    transition: margin-left 0.5s ease-in-out;
+﻿/* site.css */
+#sidebarMenu {
+    transition: width 0.5s ease-in-out;
+    width: 30vw;
+    overflow: hidden;
+
 }
 
-    #sidebarMenu.hidden {
-        margin-left: -300px;
-    }
-
+#sidebarMenu.hidden {
+    width: 0;
+}
 
